[project]
name = "Midgard"
version = "0.2.2"
license = "MIT"
license-files = ["LICENSE"]
description = "Common functionalities to be shared between different projects."
readme = "README.md"
authors = [
  {name = "Thiago Dias", email = "thiago@yggdrasil.codes"}
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "glom>=25.12.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "git-cliff>=2.12.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
